--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			<div class="control">
 				<label for="alarmEnabled">Alarm</label>
 
-				<button class="indicator" id="alarmEnabled" data-indicator-name="ledAlarmEnabled">
+				<button class="indicator" id="alarmEnabled" data-button-name="ledAlarmEnabled">
 					On
 				</button>
 			</div>
@@ -127,7 +127,7 @@
 			<div class="control">
 				<label for="pump1">Pump 1</label>
 
-				<button class="indicator" id="pump1" type="button" data-indicator-name="ledPump1">
+				<button class="indicator" id="pump1" type="button" data-button-name="ledPump1">
 					Off
 				</button>
 			</div>
@@ -135,7 +135,7 @@
 			<div class="control">
 				<label for="pump2">Pump 2</label>
 
-				<button class="indicator" id="pump2" data-indicator-name="ledPump2">
+				<button class="indicator" id="pump2" data-button-name="ledPump2">
 					On
 				</button>
 			</div>
@@ -143,7 +143,7 @@
 			<div class="control">
 				<label for="plc">PLC</label>
 
-				<button class="indicator" type="button" id="plc" data-indicator-name="ledPLC">
+				<button class="indicator" type="button" id="plc" data-button-name="ledPLC">
 					On
 				</button>
 			</div>
