--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</div>
 
 					<div class="temp-value">
-						<span data-temp-name="temp1">123</span><span> C&deg</span>
+						<span data-temp-name="temp1">0</span><span> C&deg</span>
 					</div>
 				</div>
 
@@ -57,7 +57,7 @@
 					</div>
 
 					<div class="temp-value">
-						<span data-temp-name="temp2">2</span>
+						<span data-temp-name="temp2">0</span>
 						<span>C&deg</span>
 					</div>
 				</div>
@@ -78,7 +78,7 @@
 					</div>
 
 					<div class="temp-value">
-						<span data-temp-name="temp3">1</span>
+						<span data-temp-name="temp3">0</span>
 						<span>C&deg</span>
 					</div>
 				</div>
@@ -99,7 +99,7 @@
 					</div>
 
 					<div class="temp-value">
-						<span data-temp-name="temp4">123</span>
+						<span data-temp-name="temp4"></span>
 						<span>C&deg</span>
 					</div>
 				</div>
